--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,10 @@
 # Port to bind the resolver (must be >1024 for non-root users)
 listen_port: "1053"
 
+# Optional bind enterface listening
+# Leave blank or omit to listen on all interfaces
+# bind_address: "127.0.0.1"
+
 # Path to the DNS zone file
 hosts_file: "zones.txt"
 
